--- a/crafted/index.html
+++ b/crafted/index.html
@@ -109,7 +109,7 @@
 				<div class="col-lg-6 col-md-12 home-banner-left d-flex fullscreen align-items-center">
 					<div>
 						<h1 class="">
-							We Are <span>Crafted</span>. <br>
+							We Are <span>Wryte</span>. <br>
 							Design & Development <br>
 							<span>Service</span> Provider.
 						</h1>
@@ -214,9 +214,10 @@
 							<img class="clr-icon" src="img/service/clr-icon1.png" alt="">
 						</div>
 						<div class="service-content">
-							<h4>Story Boarding</h4>
-							<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards
-								especially in the workplace that’s why.</p>
+							<h4>Retire Incubation</h4>
+							<p>We provide incubation for retirement who need changing their retire condition.
+								Retirement is not the end of the road, it is the beginning the open highway.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -227,6 +228,37 @@
 							<img src="img/service/shape1.png" alt="">
 							<img class="s-icon" src="img/service/icon2.png" alt="">
 							<img class="clr-icon" src="img/service/clr-icon2.png" alt="">
+						</div>
+						<div class="service-content">
+							<h4>IT Development & Consulting</h4>
+							<p>By providing the right choice of technological business solutions, 
+								we help enterprises go beyond automating traditional methods and 
+								processes and explore new ways to boost business and even transform business models.</p>
+						</div>
+					</div>
+				</div>
+				<!-- single-features -->
+				<div class="col-lg-3 offset-lg-1 col-sm-6 col-md-6">
+					<div class="single-service">
+						<div class="service-icon">
+							<img src="img/service/shape1.png" alt="">
+							<img class="s-icon" src="img/service/icon3.png" alt="">
+							<img class="clr-icon" src="img/service/clr-icon3.png" alt="">
+						</div>
+						<div class="service-content">
+							<h4>Story Boarding</h4>
+							<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards
+								especially in the workplace that’s why.</p>
+						</div>
+					</div>
+				</div>
+				<!-- single-features -->
+				<div class="col-lg-3 col-sm-6 col-md-6">
+					<div class="single-service">
+						<div class="service-icon">
+							<img src="img/service/shape1.png" alt="">
+							<img class="s-icon" src="img/service/icon3.png" alt="">
+							<img class="clr-icon" src="img/service/clr-icon3.png" alt="">
 						</div>
 						<div class="service-content">
 							<h4>Story Boarding</h4>
@@ -384,11 +416,11 @@
 				<div class="row align-items-center single-item">
 					<div class="col-lg-6 col-md-6">
 						<div class="team-left">
-							<img class="img-fluid" src="img/team1.jpg" alt="">
+							<img class="img-fluid" src="img/yories.jpg" alt="">
 							<div class="member-desc d-flex justify-content-between align-items-center">
 								<div class="m-title">
-									<h4>Randy Weaver</h4>
-									<p>Senior Barrister at law</p>
+									<h4>Yories Yolanda</h4>
+									<p>Co-Founder Wryte</p>
 								</div>
 								<div class="m-social">
 									<div class="t-icons">
@@ -417,7 +449,7 @@
 				<div class="row align-items-center single-item">
 					<div class="col-lg-6 col-md-6">
 						<div class="team-left">
-							<img class="img-fluid" src="img/team1.jpg" alt="">
+							<img class="img-fluid" src="img/tomi.jpg" alt="">
 							<div class="member-desc d-flex justify-content-between align-items-center">
 								<div class="m-title">
 									<h4>Randy Weaver</h4>
@@ -519,77 +551,7 @@
 	<!--================ End CTA Area =================-->
 
 	<!--================ Start Blog Area =================-->
-	<section class="blog-area section-gap">
-		<div class="container">
-			<div class="row align-items-end justify-content-center">
-				<div class="col-lg-5 col-md-12 text-left">
-					<div class="section-title">
-						<h1>Latest Posts<br> From Our Blog</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-							magna aliqua. Ut enim ad minim veniam quis nostrud exercitation.</p>
-					</div>
-				</div>
-				<div class="col-lg-5 col-md-12 offset-lg-2 text-right">
-					<div class="blog-btn">
-						<a href="#" class="primary-btn">Get Estimate for Free</a>
-					</div>
-				</div>
-			</div>
-			<div class="row blog-inner justify-content-center">
-				<!-- single-blog -->
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="single-blog">
-						<div class="blog-thumb">
-							<img class="img-fluid" src="img/blog/h-blog1.jpg" alt="">
-						</div>
-						<div class="blog-details">
-							<div class="blog-meta">
-								<span>25 june, 2018 | By Mark Wiens</span>
-							</div>
-							<h5><a href="#">Addiction When Gambling <br>
-									Becomes A Problem</a></h5>
-							<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in
-								front of their desktops.</p>
-						</div>
-					</div>
-				</div>
-				<!-- single-blog -->
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="single-blog">
-						<div class="blog-thumb">
-							<img class="img-fluid" src="img/blog/h-blog2.jpg" alt="">
-						</div>
-						<div class="blog-details">
-							<div class="blog-meta">
-								<span>25 june, 2018 | By Mark Wiens</span>
-							</div>
-							<h5><a href="#">Addiction When Gambling <br>
-									Becomes A Problem</a></h5>
-							<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in
-								front of their desktops.</p>
-						</div>
-					</div>
-				</div>
-				<!-- single-blog -->
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="single-blog">
-						<div class="blog-thumb">
-							<img class="img-fluid" src="img/blog/h-blog3.jpg" alt="">
-						</div>
-						<div class="blog-details">
-							<div class="blog-meta">
-								<span>25 june, 2018 | By Mark Wiens</span>
-							</div>
-							<h5><a href="#">Addiction When Gambling <br>
-									Becomes A Problem</a></h5>
-							<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in
-								front of their desktops.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	
 	<!--================ End Blog Area =================-->
 
 	<!--================ start footer Area  =================-->
@@ -673,7 +635,7 @@
 					<div class="col-lg-12">
 						<div>
 							<p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 						</div>
 						<div class="footer-social d-flex align-items-center">
