--- a/crafted/index.html
+++ b/crafted/index.html
@@ -200,7 +200,7 @@
 				<div class="col-lg-9 text-center">
 					<div class="section-title">
 						<p>We Are Providing these services</p>
-						<h1>We Are <span>Crafted.</span> We Provide These <br> Services to Our Customers</h1>
+						<h1>We Are <span>Wryte.</span> We Provide These <br> Services to Our Customers</h1>
 					</div>
 				</div>
 			</div>
@@ -251,37 +251,7 @@
 								especially in the workplace that’s why.</p>
 						</div>
 					</div>
-				</div>
-				<!-- single-features -->
-				<div class="col-lg-3 col-sm-6 col-md-6">
-					<div class="single-service">
-						<div class="service-icon">
-							<img src="img/service/shape1.png" alt="">
-							<img class="s-icon" src="img/service/icon3.png" alt="">
-							<img class="clr-icon" src="img/service/clr-icon3.png" alt="">
-						</div>
-						<div class="service-content">
-							<h4>Story Boarding</h4>
-							<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards
-								especially in the workplace that’s why.</p>
-						</div>
-					</div>
-				</div>
-				<!-- single-features -->
-				<div class="col-lg-3 offset-lg-1 col-sm-6 col-md-6">
-					<div class="single-service">
-						<div class="service-icon">
-							<img src="img/service/shape1.png" alt="">
-							<img class="s-icon" src="img/service/icon3.png" alt="">
-							<img class="clr-icon" src="img/service/clr-icon3.png" alt="">
-						</div>
-						<div class="service-content">
-							<h4>Story Boarding</h4>
-							<p>inappropriate behavior is often laughed off as boys will be boys,” women face higher conduct standards
-								especially in the workplace that’s why.</p>
-						</div>
-					</div>
-				</div>
+				</div>				
 			</div>
 		</div>
 	</section>
