--- a/crafted/index.html
+++ b/crafted/index.html
@@ -268,7 +268,7 @@
 					</a>
 				</div>
 				<div class="col-lg-5 offset-lg-1 video-right">
-					<h1>We Are Crafted. <br>
+					<h1>We Are Wryte. <br>
 						Some Info About Us</h1>
 					<p>
 						In the history of modern astronomy, there is probably no one greater leap forward than the building and launch of
